[gd_scene load_steps=5 format=3 uid="uid://player001"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/sprites/player1/rotations/south.png" id="2_sprite"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.4
height = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_melee"]
radius = 2.0

[node name="Player" type="CharacterBody3D"]
collision_layer = 1
collision_mask = 3
script = ExtResource("1_script")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
pixel_size = 0.04
texture = ExtResource("2_sprite")

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="MeleeTimer" type="Timer" parent="."]
one_shot = true

[node name="MeleeArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="MeleeShape" type="CollisionShape3D" parent="MeleeArea"]
shape = SubResource("SphereShape3D_melee")
